# rust-samples

./: .gitignore  README.md
file_perf/: Cargo.toml  data.txt
file_perf/src/: lib.rs
rustffi/: Cargo.toml  build_ios.sh
rustffi/src/: lib.rs  sqlite_perf_test.rs
sqlite_perf/: Cargo.toml  README.md
sqlite_perf/migrations/20200210214706_create_users/: up.sql
sqlite_perf/src/: lib.rs  models.rs  perf_test.rs
swift-perf/: .gitignore  README.md  build_rust.sh
swift-perf/rust-ffi/: rustffi.h  swift-perf-Bridging-Header.h
swift-perf/swift-perf/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
swift-perf/swift-perf.xcodeproj/: project.pbxproj
swift-perf/swift-perf.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift-perf/swift-perfTests/: swift_perfTests.swift
swift-perf/swift-perfUITests/: swift_perfUITests.swift
tokio_perf/: Cargo.toml
tokio_perf/src/: lib.rs  perf_test.rs
