[package]
name = "file_perf"
version = "0.1.0"
authors = ["bingoli <bingoli2014@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
lazy_static = "1.0.0"
tokio="0.1.13"
tokio-current-thread = "0.1"
tokio-reactor = "0.1"
tokio-io = "0.1"
chrono = "0.4.10"

