[package]
name = "sqlite-perf"
version = "0.1.0"
authors = ["bingoli <bingoli2014@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
dotenv = "0.10"
